--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ PyQt5==5.13.1
 PyQt5-sip==12.7.0
 pyqtgraph==0.10.0
 setuptools==40.8.0
+matplotlib==3.1.2
+scipy==1.4.1
+lmfit==1.0.0
+joblib==0.14.1
+fpdf==1.7.2
+openpyxl==3.0.2
