gitignore updated by Joao

--- a/.gitignore
+++ b/.gitignore
@@ -355,6 +355,6 @@ venv-linux/
 /Weasel.exe
 /report.pdf
 Weasel-ROI-Joao.py
-/SimpleITK/*.pyd
-/SimpleITK/*.so
+/CoreModules/SimpleITK/*.pyd
+/CoreModules/SimpleITK/*.so
 *.ipynb
