--- a/.gitignore
+++ b/.gitignore
@@ -345,6 +345,7 @@ venv-linux/
 .vscode/
 *__pycache__/
 **.pyc
+/Developer/WEASEL/Tools/fsl
 /Sample Data/00000001
 /Sample Data/joao-3-scanners
 /Sample Data/TRISTAN_DNE001_Scan1
