Tidying up code in TreeView.py and enabled multiple selections.

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ Weasel-ROI-Joao.py
 /WeaselData/003
 /WeaselData/test
 *.xlsx
+/WeaselData/Sample Data/output_Copy/output_Copy/output_Copy/output_Copy
