Tree View image name now taken from the <label> element

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ Weasel-ROI-Joao.py
 /WeaselData/test
 *.xlsx
 /WeaselData/Sample Data/output_Copy/output_Copy/output_Copy/output_Copy
+/WeaselData/Sample Data/Sample Data_old.xml
