--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,6 @@ Weasel-ROI-Joao.py
 *.xlsx
 /WeaselData/Sample Data/output_Copy/output_Copy/output_Copy/output_Copy
 /WeaselData/Sample Data/Sample Data_old.xml
+/WeaselData/Joao-3-scanners-2019/003
+/WeaselData/Joao-3-scanners-2019/003/3510/SNAPSHOTS
+/WeaselData/Joao-3-scanners-2019
