Bug fixes after testing tools menu

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,10 @@ Weasel-ROI-Joao.py
 /WeaselData/Joao-3-scanners-2019/003
 /WeaselData/Joao-3-scanners-2019/003/3510/SNAPSHOTS
 /WeaselData/Joao-3-scanners-2019
+/WeaselData/Sample Data/output_Invert/output_Invert/output_Square/output_Square/output_Thresholded
+/WeaselData/Sample Data/output_Invert/output_Invert/output_Square/output_Square
+/WeaselData/Sample Data/output_Invert/output_Invert/output_Square
+/WeaselData/Sample Data/output_Invert/output_Invert
+/WeaselData/Sample Data/output_Invert
+/WeaselData/Sample Data/output_Square
+/WeaselData/Sample Data/output_Thresholded
