.gitignore updated and import statements updated with Developer.External

--- a/.gitignore
+++ b/.gitignore
@@ -340,6 +340,9 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
+# Configuration XML file
+config.xml
+
 #The following are for Joao's Python Environments and VS Code
 venv-windows/
 venv-linux/
