--- a/.gitignore
+++ b/.gitignore
@@ -341,7 +341,7 @@ ASALocalRun/
 healthchecksdb
 
 # Configuration XML file
-config.xml
+/config.xml
 
 #The following are for Joao's Python Environments and VS Code
 venv-windows/
@@ -360,7 +360,6 @@ venv-linux/
 /env
 /Weasel.exe
 /report.pdf
-Weasel-ROI-Joao.py
 /CoreModules/SimpleITK/*.pyd
 /CoreModules/SimpleITK/*.so
 *.ipynb
