--- a/.gitignore
+++ b/.gitignore
@@ -341,7 +341,7 @@ ASALocalRun/
 healthchecksdb
 
 # Configuration XML file
-./config.xml
+*config.xml
 
 #The following are for Joao's Python Environments and VS Code
 venv-windows/
