New T2Star script added using the External package "ukat"

--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ venv-linux/
 /WeaselData/Sample Data/output_Invert
 /WeaselData/Sample Data/output_Square
 /WeaselData/Sample Data/output_Thresholded
+/Developer/External/ukat
