--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ openpyxl==3.0.2
 pandas==0.25.1
 pip==20.3.1
 pyautogui==0.9.48
-pydicom==2.1.1
+pydicom==2.0.0
 PyQt5==5.13.1
 PyQt5-sip==12.7.0
 pyqtgraph==0.10.0
@@ -21,6 +21,6 @@ scipy==1.4.1
 setuptools==40.8.0
 Sphinx==3.2.1
 sphinx-rtd-theme==0.5.0
-tensorflow=2.0.0
+tensorflow==2.0.0
 xlrd==1.2.0
 xnat==0.3.25
