Set drawing pencil & eraser cursor hot spots to their tip

--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,4 @@ venv-linux/
 /WeaselData/Sample Data/output_Thresholded
 /Developer/External/ukat
 /CoreModules/pyqtgraph/graphicsItems/ImageItem_old.py
+/WeaselData/SampleData/output_ROI_region1
