synchronised context menu items to buttons on display image draw ROI screen

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.pyproj
+*.sln
 config.xml
 /WEASELData
 # User-specific files (MonoDevelop/Xamarin Studio)
