Developer folder changed to External and affected files updated with imports and other files moved around

--- a/.gitignore
+++ b/.gitignore
@@ -386,6 +386,6 @@ venv-linux/
 /WeaselData/Sample Data/output_Invert
 /WeaselData/Sample Data/output_Square
 /WeaselData/Sample Data/output_Thresholded
-/Developer/External/ukat
+/External/ukat
 /CoreModules/pyqtgraph/graphicsItems/ImageItem_old.py
 /WeaselData/SampleData/output_ROI_region1
