--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ PyQt5-sip==12.7.0
 scikit-image==0.16.2
 scipy==1.4.1
 setuptools==40.8.0
+sip==6.0.0
 Sphinx==3.2.1
 sphinx-rtd-theme==0.5.0
 xlrd==1.2.0
