--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-fpdf==1.7.2
-joblib==0.14.1
-lmfit==1.0.0
-matplotlib==3.1.2
-nibabel==3.0.2
-numpy==1.17.3
-openpyxl==3.0.2
-pyautogui==0.9.48
-pydicom==2.0.0
-PyQt5==5.15.2
-PyQt5-sip==12.7.0
-scikit-image==0.16.2
-scipy==1.4.1
-setuptools==40.8.0
-sip==6.0.0
-Sphinx==3.2.1
-sphinx-rtd-theme==0.5.0
-xlrd==1.2.0
+fpdf>=1.7.2
+joblib>=0.14.1
+lmfit>=1.0.0
+matplotlib>=3.1.2
+nibabel>=3.0.2
+numpy>=1.17.3
+openpyxl>=3.0.2
+pyautogui>=0.9.48
+pydicom>=2.0.0
+PyQt5>=5.15.2
+PyQt5-sip>=12.8.1
+scikit-image>=0.16.2
+scipy>=1.4.1
+setuptools>=40.8.0
+sip>=6.0.0
+Sphinx>=3.2.1
+sphinx-rtd-theme>=0.5.0
+xlrd>=1.2.0
