--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,4 @@ venv-linux/
 /External/ukat
 /CoreModules/pyqtgraph/graphicsItems/ImageItem_old.py
 /WeaselData/SampleData/output_ROI_region1
+/Weasel.sln.txt
