--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.sln.docstates
 *.pyproj
 *.sln
-config.xml
+.config.xml
 /WEASELData
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
