--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ matplotlib>=3.1.2
 nibabel>=3.0.2
 numpy>=1.17.3
 openpyxl>=3.0.2
-pandas>=1.0.0
+pandas>=1.0.0,<1.2
 pyautogui>=0.9.48
 pydicom>=2.0.0
 PyQt5>=5.15.2
