config.xml was not correctly added to gitignore and should be fixed now

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 *.sln.docstates
 *.pyproj
 *.sln
-.config.xml
+config.xml
 /WEASELData
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
