--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ openpyxl>=3.0.2
 pandas>=1.0.0,<1.2
 pyautogui>=0.9.48
 pydicom>=2.0.0
+pyinstaller>=4.2
 PyQt5>=5.15.2
 PyQt5-sip>=12.8.1
 scikit-image>=0.16.2
