--- a/.gitignore
+++ b/.gitignore
@@ -353,6 +353,7 @@ healthchecksdb
 #The following are for Joao's Python Environments and VS Code
 /venv-windows/
 /venv-linux/
+/venv/
 .vscode/
 *__pycache__/
 **.pyc
