--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ lmfit>=1.0.0
 matplotlib>=3.1.2
 nibabel>=3.0.2
 numpy>=1.17.3
-opencv-python>=4.5.1.48
+opencv-python==3.4.13.47
 openpyxl>=3.0.2
 pandas>=1.0.0,<1.2
 pyautogui>=0.9.48
