--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ argparse>=1.3.0
 fpdf>=1.7.2
 joblib>=0.14.1
 lmfit>=1.0.0
-matplotlib>=3.1.2
+matplotlib==3.2.2
 nibabel>=3.0.2
 numpy>=1.17.3
 opencv-python==3.4.13.47
