--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ opencv-python==3.4.13.47
 openpyxl>=3.0.2
 pandas>=1.0.0,<1.2
 pyautogui>=0.9.48
-pydicom>=2.0.0
+pydicom>=2.0.0,<2.2.0
 pyinstaller>=4.2
 PyQt5==5.11.2
 PyQt5-sip>=12.8.1
