--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 argparse>=1.3.0
 fpdf>=1.7.2
+itk-elastix>=0.10.0
 joblib>=0.14.1
 lmfit>=1.0.0
 matplotlib==3.2.2
@@ -17,6 +18,7 @@ PyQt5-sip>=12.8.1
 reportlab>=3.6.1
 scipy>=1.4.1
 setuptools>=53.0.0
+SimpleITK>=2.0.0
 sip>=6.0.0
 Sphinx>=3.2.1
 sphinx-rtd-theme>=0.5.0
