--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -9,4 +9,5 @@ jobs:
     steps:
       - name: Deploy Manual Github Page
         run: |
+          echo "Workflow working so far"
           git subtree push --prefix Documents/Manual origin gh-pages
