--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -9,5 +9,8 @@ jobs:
     steps:
       - name: Deploy Manual Github Page
         run: |
-          cd WEASEL
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git add Documents/Manual
+          git commit -m "Initial Manual subtree commit"
           git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
