--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -10,8 +10,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Deploy Manual Github Page
         run: |
+          python3 create_weasel_manual.py
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git add Documents/Manual
+          git commit -m "Manual updated"
+          git push origin main
           git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
