--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -7,11 +7,33 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Python
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7' # install the python version needed
+          
+      - name: Install Python Packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build Github Page Manual
       - uses: actions/checkout@v2
-      - name: Deploy Manual Github Page
+        run: |
+          python create_weasel_manual.py
+
+      - name: Commit and Deploy Github Page Manual
+      - uses: actions/checkout@v2
         run: |
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git add Documents/Manual
+          git commit -m "Documents/Manual generated and uploaded" -a
           git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
+
+      - name: Push Manual Changes to Github
+      - uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main  
