--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -7,8 +7,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Python
       - uses: actions/setup-python@v2
+      - name: Setup Python
         with:
           python-version: '3.7' # install the python version needed
           
@@ -17,13 +17,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - uses: actions/checkout@v2
       - name: Build Github Page Manual
-      - uses: actions/checkout@v2
-        run: |
-          python create_weasel_manual.py
+        run: python create_weasel_manual.py
 
-      - name: Commit and Deploy Github Page Manual
       - uses: actions/checkout@v2
+      - name: Commit and Deploy Github Page Manual
         run: |
           git --version
           git config user.name "GitHub Actions Bot"
@@ -32,8 +31,8 @@ jobs:
           git commit -m "Documents/Manual generated and uploaded" -a
           git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
 
-      - name: Push Manual Changes to Github
       - uses: ad-m/github-push-action@v0.6.0
+      - name: Push Manual Changes to Github
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main  
