--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -17,12 +17,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - uses: actions/checkout@v2
       - name: Build Github Page Manual
+        uses: actions/checkout@v2
         run: python create_weasel_manual.py
 
-      - uses: actions/checkout@v2
       - name: Commit and Deploy Github Page Manual
+        uses: actions/checkout@v2
         run: |
           git --version
           git config user.name "GitHub Actions Bot"
@@ -31,8 +31,8 @@ jobs:
           git commit -m "Documents/Manual generated and uploaded" -a
           git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
 
-      - uses: ad-m/github-push-action@v0.6.0
       - name: Push Manual Changes to Github
+        uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main  
