--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -1,4 +1,4 @@
-name: Upload Manual to Github Page
+name: Upload manual to Github Page
 on:
   push:
     branches:
@@ -8,24 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.7' # install the python version needed
-          
-      - name: Install Python Packages
-        run: |
-          python -m pip install --upgrade pip
-          pip install pdoc3
-
-      - name: Build Github Page Manual
-        run: python create_weasel_executable.py
-
-      - name: Commit and Deploy Github Page Manual
+      - name: Deploy manual to Github Page https://qib-sheffield.github.io/WEASEL/
         run: |
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git add Documents/Manual
-          git commit -m "Documents/Manual generated and uploaded" -a
           git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
