--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -1,11 +1,17 @@
-name: Create Weasel Executable
+name: Create Weasel Release
 on:
+  #schedule:
+  #    - cron: "0 0 * * *" #runs at 00:00 UTC everyday
+  # Maybe every Friday at midday?
   push:
     branches:
       - master
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -19,3 +25,38 @@ jobs:
 
       - name: Generate Executable
         run: python create_weasel_executable.py
+
+      - name: Zip the output files
+        uses: papeloto/action-zip@v1
+        with:
+          files: Weasel.exe Weasel Weasel.so config.xml
+          dest: pyinstaller_output.zip
+        # config.xml + exec 
+        #run: python create_weasel_executable.py
+      
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d')"
+
+      - name: Create the Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v${{ github.run_number }}_${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Weekly Release: ${{ steps.date.outputs.date }}
+          draft: false
+          prerelease: false
+          
+      - name: Upload Zipped Executables to the Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./pyinstaller_output.zip
+        asset_name: ${{ steps.date.outputs.date }}-weasel-${{ matrix.os }}.zip
+        asset_content_type: application/zip
