--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -7,11 +7,33 @@ on:
     branches:
       - master
 jobs:
-  build-and-deploy:
+  release:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y%m%d')"
+
+    - name: Create the Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: v${{ github.run_number }}_${{ github.sha }}
+        release_name: Weasel ${{ steps.date.outputs.date }}
+        body: |
+          Weekly Release: ${{ steps.date.outputs.date }}
+        draft: false
+        prerelease: false
+
+  build:
     runs-on: ${{ matrix.os }}
+    needs: release
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -23,7 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Generate Executable
+      - name: Generate the Executable
         run: python create_weasel_executable.py
 
       - name: Zip the output files
@@ -31,32 +53,13 @@ jobs:
         with:
           files: Weasel.exe Weasel Weasel.so config.xml
           dest: pyinstaller_output.zip
-        # config.xml + exec 
-        #run: python create_weasel_executable.py
-      
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y%m%d')"
-
-      - name: Create the Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: v${{ github.run_number }}_${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Weekly Release: ${{ steps.date.outputs.date }}
-          draft: false
-          prerelease: false
           
-      - name: Upload Zipped Executables to the Release
+      - name: Upload the zipped executable to the Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ release.steps.create_release.outputs.upload_url }}
           asset_path: ./pyinstaller_output.zip
-          asset_name: ${{ steps.date.outputs.date }}-weasel-${{ matrix.os }}.zip
+          asset_name: ${{ release.steps.date.outputs.date }}-weasel-${{ matrix.os }}.zip
           asset_content_type: application/zip
