--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -59,7 +59,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          upload_url: ${{ jobs.release.steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.release.steps.create_release.outputs.upload_url }}
           asset_path: ./pyinstaller_output.zip
-          asset_name: ${{ jobs.release.steps.date.outputs.date }}-weasel-${{ matrix.os }}.zip
+          asset_name: ${{ needs.release.steps.date.outputs.date }}-weasel-${{ matrix.os }}.zip
           asset_content_type: application/zip
