Checking current directories in different OS

--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -50,16 +50,20 @@ jobs:
 
       - name: Generate the Executable for Windows
         if: ${{ matrix.os == 'windows-latest'}}
-        run: python create_weasel_executable.py
+        run: |
+          cd
+          python create_weasel_executable.py
 
       - name: Generate the Executable for MacOS/Linux
         if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'}}
-        run: sudo python create_weasel_executable.py
+        run: |
+          pwd
+          sudo python create_weasel_executable.py
 
       - name: Zip the output files
         uses: papeloto/action-zip@v1
         with:
-          files: Weasel.exe Weasel Weasel.so config.xml Menus/ Menus\
+          files: Weasel.exe Weasel Weasel.so config.xml Menus
           dest: pyinstaller_output.zip
           
       - name: Upload the zipped executable to the Release
