--- a/.github/workflows/gh-pages-WIP.yaml
+++ b/.github/workflows/gh-pages-WIP.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Install Python Packages
         run: |
           python -m pip install --upgrade pip
+          pip install pdoc3
 
       - name: Generate updated Reference Manual
         run: |
