--- a/.github/workflows/gh-pages-WIP.yaml
+++ b/.github/workflows/gh-pages-WIP.yaml
@@ -17,6 +17,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pdoc3
+      
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d')"
 
       - name: Generate updated Reference Manual
         run: |
@@ -27,5 +31,9 @@ jobs:
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-          git add Documents/Manual
-          git push origin `git subtree split --prefix Documents/Manual master`:gh-pages --force
+          cd Documents/Manual
+          git init
+          git add.
+          git commit -m "Reference Manual ${{ steps.date.outputs.date }}"
+          git remote add origin https://github.com/QIB-Sheffield/WEASEL.git
+          git push origin gh-pages
