--- a/.github/workflows/gh-pages-WIP.yaml
+++ b/.github/workflows/gh-pages-WIP.yaml
@@ -27,13 +27,10 @@ jobs:
           python create_weasel_manual.py
 
       - name: Deploy manual to Github Page https://qib-sheffield.github.io/WEASEL/
-        run: |
-          git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          cd Documents/Manual
-          git init
-          git add .
-          git commit -m "Reference Manual ${{ steps.date.outputs.date }}"
-          git remote add origin https://github.com/QIB-Sheffield/WEASEL.git
-          git push origin gh-pages
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: gh-pages
+          FOLDER: Documents/Manual
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MESSAGE: "Reference Manual ${{ steps.date.outputs.date }}"
