--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -14,30 +14,31 @@ jobs:
       date_string: ${{ steps.date.outputs.date }}
 
     steps:
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y%m%d')"
-
-    - name: Build Changelog
-      id: github_release
-      uses: mikepenz/release-changelog-builder-action@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Create the Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: v${{ github.run_number }}_${{ github.sha }}
-        release_name: Weasel ${{ steps.date.outputs.date }}
-        body: |
-          Weekly Release: ${{ steps.date.outputs.date }}
-
-          ${{steps.github_release.outputs.changelog}}
-        draft: false
-        prerelease: false
+      - uses: actions/checkout@v2
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d')"
+  
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+      - name: Create the Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v${{ github.run_number }}_${{ github.sha }}
+          release_name: Weasel ${{ steps.date.outputs.date }}
+          body: |
+            Weekly Release: ${{ steps.date.outputs.date }}
+  
+            ${{steps.github_release.outputs.changelog}}
+          draft: false
+          prerelease: false
 
   build:
     runs-on: ${{ matrix.os }}
