--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,11 @@ opencv-python>=4.2.0.32
 openpyxl>=3.0.2
 pandas>=1.0.0,<1.2
 pdoc3>=0.10.0
+pip>=21.2.1
 pyautogui>=0.9.48
 pydicom>=2.0.0,<2.2.0
 pyinstaller>=4.2
-PyQt5==5.11.2
+PyQt5==5.15.1
 PyQt5-sip>=12.8.1
 reportlab>=3.6.1
 scipy>=1.4.1
