--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -1,7 +1,10 @@
 name: Create Weekly Weasel Release
 on:
-  schedule:
-    - cron: "0 12 * * 5" #runs at 12:00 UTC every Friday
+  push:
+    branches:
+      - master
+  #schedule:
+  #  - cron: "0 12 * * 5" #runs at 12:00 UTC every Friday
 
 jobs:
   release:
