--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -1,10 +1,7 @@
 name: Create Weekly Weasel Release
 on:
-  push:
-    branches:
-      - master
-  #schedule:
-  #  - cron: "0 12 * * 5" #runs at 12:00 UTC every Friday
+  schedule:
+    - cron: "0 12 * * 5" #runs at 12:00 UTC every Friday
 
 jobs:
   release:
