--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python create_weasel_manual.py
 
-      - name: Deploy manual to Github Page https://qib-sheffield.github.io/WEASEL/
+      - name: Deploy manual to Github Page https://qib-sheffield.github.io/Weasel/
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
