--- a/.github/workflows/monthly-release.yaml
+++ b/.github/workflows/monthly-release.yaml
@@ -1,8 +1,5 @@
 name: Create Monthly Weasel Release
 on:
-  push:
-    branches:
-      - master
   schedule:
     - cron: "0 12 1 * *" #runs at 12:00 UTC on the first day of every month
 
@@ -32,8 +29,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          #tag_name: v${{ github.run_number }}_${{ github.sha }}
-          tag_name: Weasel-0.2
+          tag_name: v${{ github.run_number }}_${{ github.sha }}
           release_name: Weasel ${{ steps.date.outputs.date }}
           body: |
             **Monthly Release:** ${{ steps.date.outputs.date }}
