--- a/.github/workflows/monthly-release.yaml
+++ b/.github/workflows/monthly-release.yaml
@@ -2,6 +2,8 @@ name: Create Monthly Weasel Release
 on:
   schedule:
     - cron: "0 12 1 * *" #runs at 12:00 UTC on the first day of every month
+    # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   release:
